# invest-skills

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  SKILL.md  gemini-extension.json  gemini-extension.json.in  pyproject.toml  review.md  skills.yaml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  marketplace.json.in  plugin.json  plugin.json.in
.claude/commands/: invest-a-etf.md  invest-a-gap-scan.md  invest-a-journal.md  invest-a-limit-up.md  invest-a-stock.md
.claude/skills/: invest-A  invest-a-etf  invest-a-gap-scan  invest-a-journal  invest-a-limit-up  invest-a-stock
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: ai_pr_review.py  extract_release_notes.py  test_extract_release_notes.py
.github/workflows/: ai-review.yml  release-draft.yml  release.yml  security.yml  validate.yml
config/: cross_validation_rules.yaml  dimension_baselines.yaml  source_credibility.yaml
docs/: README.md  TODO.md  invest-A-SKILL-LAW10-15.md  invest-A-SKILL-LAW10-16.md  invest-A-blueprint-v013-final.md  invest-A-blueprint-v013-revised.md  invest-A-v013-execution-plan.md  invest-A-v013-phase1-dynamic-kernel.md  invest-A-v013-phase2-fundamentals-valuation.md  invest-A-v013-phase3-risk-divergence.md  invest-A-v013-phase4-cross-timepoint-ux.md  invest-A-v013-subplans-index.md  report-example.md  roadmap.md  v0.1.3-improvement-blueprint.md  外部服务依赖审计.md  执行计划-Phase6与缺口.md  执行计划-实施明细.md  执行计划-执行步骤.md  执行计划-架构关系.md  执行计划.md  数据源对比与权重设定方案.md
hooks/: hooks.json
hooks/scripts/: check-config.sh
host-docs/v0.2.2/: issue-add-volatility.md
knowledge/: a_share_special.md  etf_guide.md  financial_metrics.md  hk_share_special.md  macro_framework.md  risk_management.md  valuation.md
reports/: 600176_中国巨石_2026-06-15.md
scripts/: bump-version.sh  data_pipeline.py  entry_check.py  protect-main-branch.sh  sync_version.py  version_sync.py
scripts/lib/: a_share_data.py  commodity_data.py  data_utils.py  env_check.py  etf_data.py  fund_flow.py  global_macro.py  hk_share_data.py  industry_chain.py  news_search.py  quality_scorer.py  realtime_quote.py  report_render.py  sentiment_data.py  tushare_client.py  web_research.py
skills/invest-A/: SKILL.md  strategies
skills/invest-a-etf/: SKILL.md
strategies/: basic_info.yaml  etf_analysis.yaml  fundamental.yaml  industry.yaml  institutional.yaml  macro.yaml  sentiment.yaml  technical.yaml  valuation.yaml
(+242 files in other folders)
