[project]
name = "investment-learning-skill"
version = "0.1.5"
description = "A股个股调研多因子投研助手 — Tushare + FRED 数据采集，产出带来源追溯的 Markdown 研究备忘录"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "pandas>=2.0",
  "requests>=2.31",
  "fredapi>=0.5.2",
  "akshare>=1.18.64",
  "baostock>=0.8.9",
  "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=6,<8",
]

[tool.pytest.ini_options]
testpaths = ["skills/invest-A/tests"]
python_files = ["test_*.py"]
addopts = ["-q", "--tb=short"]

[tool.coverage.run]
source = ["skills/invest-A/scripts"]

[tool.coverage.report]
skip_empty = true
