[project]
name = "invest-skills"
version = "0.2.0"
description = "投研技能集：A股个股深度研究 + 涨停板扫描 — 多因子交叉验证，学术级引用标准"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "pandas>=2.0",
  "requests>=2.31",
  "fredapi>=0.5.2",
  "akshare>=1.18.64",
  "baostock>=0.8.9",
  "tickflow>=0.1.0",
  "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=6,<8",
]

[tool.pytest.ini_options]
testpaths = ["skills/invest-a-stock/tests", "skills/invest-a-limit-up/tests", "skills/invest-a-gap-scan/tests", "skills/invest-a-journal/tests", "skills/invest-a-etf/tests"]
python_files = ["test_*.py"]
addopts = ["-q", "--tb=short"]
markers = [
    "e2e: live network collect/report smoke (requires INVEST_RUN_E2E=1)",
]

[tool.coverage.run]
source = ["skills/invest-a-stock/scripts", "skills/invest-a-limit-up/scripts", "skills/invest-a-gap-scan/scripts", "skills/invest-a-journal/scripts", "skills/invest-a-etf/scripts"]

[tool.coverage.report]
skip_empty = true
